<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComprasActivity" >

    <LinearLayout
        android:id="@+id/listEncabezado"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/barraTotales"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/btnConfirmar"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/listTitulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblTitulo"
                style="@style/mediumText"
                android:layout_width="wrap_content"
                android:text="@string/compras_titulo"
                android:textColor="#FFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblAgencia"
                style="@style/mediumText"
                android:text=""
                android:textColor="#FFF" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:drawableLeft="@drawable/producto_03"
            android:text="@string/btnAddProducto"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listItems"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/listEncabezado"
        android:gravity="fill_horizontal"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:drawSelectorOnTop="false" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/noProductos"
            android:textColor="#FFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/barraTotales"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/listTotales"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="@color/barraTotales"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblTotal"
                style="@style/totalesText"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listPie"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/barra"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCarro"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/cart"
                android:text="@string/btnCarro"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnCarros"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/truck"
                android:text="@string/btnCarros"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnEliminarCarro"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/cart_remove"
                android:text="@string/btnEliminarCarro"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>