<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <LinearLayout
        android:id="@+id/listEncabezado_carros"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/barraTotales"
        android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblTitulo_carros"
                style="@style/mediumText"
                android:text="" />

            <TextView
                android:id="@+id/lblAgencia_carros"
                style="@style/mediumText"
                android:text="" />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/listItems_carros"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:gravity="fill_horizontal"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:drawSelectorOnTop="false" />

            <TextView
                android:id="@android:id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/noCarros" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@color/barra"
        android:id="@+id/listPie_carro"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCarro_carro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="2dp"
            android:drawableTop="@drawable/cart"
            android:text="@string/btnCarro"
            android:textSize="12sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCarros_carro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="2dp"
            android:drawableTop="@drawable/truck"
            android:text="@string/btnCarros"
            android:textSize="12sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnEliminarCarro_carros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="2dp"
            android:drawableTop="@drawable/cart_remove"
            android:text="@string/btnEliminarCarro"
            android:textSize="12sp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>