<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogoutActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/logout"
        android:textColor="#FFF"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="148dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaa" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_logout_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btn_aceptar"
            android:textColor="#FFF" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#aaa" />

        <Button
            android:id="@+id/btn_logout_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btn_cancelar"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaa" />
    </LinearLayout>

</RelativeLayout>